--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "node-fetch": "^2.6.1",
     "serve": "^11.3.2"
   }
 }
